screenshot test experimental
prototyping

Progressing

Compiling

Generates screenshots

Cleanups and fmt